# nebulav2

./: .gitignore  ARCHITECTURE.md  README.md  bridge.py  f.txt  nebula-architecture.drawio  proof_groth16_real.json  proof_inputs.json  sphincs.py
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  tui.rs
docs/: DEVELOPER_GUIDE.md  NON_TECHNICAL_GUIDE.md  TECHNICAL_REFERENCE.md
noir/: Nargo.toml  Prover.toml  sindri.json
noir/src/: main.nr  main_test.nr
prover/: Cargo.toml
prover/guest/: Cargo.toml
prover/guest/src/: main.rs
prover/host/: Cargo.toml
prover/host/src/: keygen.rs  main.rs
soroban/: Cargo.toml
soroban/src/: lib.rs
soroban/test_snapshots/test/: test_wrong_journal_panics.1.json
sp1/program/: Cargo.toml  sindri.json
sp1/program/src/: main.rs
sp1/script/: Cargo.toml
sp1/script/src/: gen_stdin.rs  submit.rs
xmss/: Cargo.toml
xmss/src/: main.rs
