[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
sha2 = { version = "0.10", features = [] }
anyhow = "1"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
