[workspace]
members = ["host", "guest", "methods"]
resolver = "2"

[workspace.dependencies]
risc0-zkvm = { version = "3.0.5", features = ["prove"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
slh-dsa = { version = "0.2.0-rc.4", features = ["alloc"] }
falcon-rs = { version = "0.2.3", features = ["std"] }
getrandom = { version = "0.2", features = ["custom"] }
postcard = { version = "1", features = ["alloc"] }
