[package]
name = "sphincs-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std", "getrandom"] }
serde = { workspace = true }
sha2 = { workspace = true }
falcon-rs = { workspace = true }

[[bin]]
name = "sphincs-guest"
path = "src/main.rs"
